--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -18,6 +18,7 @@ nav {
   max-width: calc(100% - 10em);
   margin: auto !important;
   padding: 0 !important;
+  z-index: 1;
 }
 a {
   /* color: white; */
